<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/masukkan_nama_negara"
            android:lines="1" />

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/cari" />

    </LinearLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        tools:context="com.example.mapwithmarker.view.MapsMarkerActivity" />

    <RelativeLayout
        android:id="@+id/relativeCountryDetailWrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_marginBottom="@dimen/dimen_10"
            android:indeterminate="true"
            android:indeterminateTint="@color/colorPrimary"
            android:indeterminateTintMode="src_atop"
            android:visibility="gone"
            tools:visibility="visible" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearCountryDetailWrapper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/txtCountryName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_negara" />

            <TextView
                android:id="@+id/txtCountryCapital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ibukota" />

            <TextView
                android:id="@+id/txtCountryPopulation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jumlah_penduduk" />

            <TextView
                android:id="@+id/txtCountryCallCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kode_telepon" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </RelativeLayout>

</LinearLayout>